--- a/robot/templates/index.html
+++ b/robot/templates/index.html
@@ -4,10 +4,21 @@
   <title>RPiBot Control</title>  
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 </head>
-<body>
 
 <style>
 </style>
+
+
+<body>
+
+<table style="">
+<tr>
+    <td>
+        <img src="http://192.168.0.34:8080/stream/video.mjpeg" width="320" height="240" alt="image" style="border:1px solid #000000;" >
+    </td>
+</tr>
+</table>
+
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script type="text/javascript" charset="utf-8">
