refactor. remove dependencies. remove unused files. added eye detection.

--- a/robot/templates/index.html
+++ b/robot/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>RPiBot Control</title>  
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="/static/scripts/jquery/jquery.min.js"></script>
 </head>
 
 <style>
