update logging modules. add speed regulator on motor.

--- a/robot/templates/index.html
+++ b/robot/templates/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- 
+rpi-robot - Raspberry Pi Robot
+Copyright (C) 2017  Blair Azzopardi
+Distributed under the terms of the GNU General Public License (GPL v3)
+ -->
 <html>
 <head>
   <title>RPiBot Control</title>  
